# openstax-qa

./: .gitignore  README.md  analyze_arc_data.py  analyze_llama.py  analyze_output_gpt4.py  anyscale_api_run.py  config.py  create_datasets.py  data_checks.py  driver.py  generate_plots.py  gpt4_answer_scorer.py  main.py  openai_xml_parser.py  postprocessing_utils.py  pyproject.toml  scrape_textbook_scrapy.py  scraper_utils.py  test.py  test6.py  token_count.py  try.py  try_attr_clear.py
archive/exploratory_code/: test4.py  test_pages.py  try_splitting_content.py  try_texmath.py
archive/test_scripts/: test3.py  test5.py  test7.py
