[tool.poetry]
name = "openstax-solved-problems-dataset"
version = "0.1.0"
description = ""
authors = ["Pranav Gupta <4760393@lowes.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.1"
openai = "^1.12.0"
pydantic-settings = "^2.2.1"
black = "^24.2.0"
twisted = "^23.10.0"
scrapy = "^2.11.1"
bs4 = "^0.0.2"
tiktoken = "^0.6.0"
selenium = "^4.18.1"
mathml2latex = "^0.2.12"
matplotlib = "^3.8.3"
pyexecjs = "^1.5.1"
html2text = "^2024.2.26"
transformers = "^4.38.2"
datasets = "^2.18.0"
huggingface-hub = "^0.21.4"
torch = "^2.2.1"
scipy = "^1.12.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
